# greprag

./: .env.example  .gitignore  .gitmodules  .ugrep  README.md  pyproject.toml  settings.py
benchmark/: __init__.py  base.py  grep.py  metrics.py  vector.py
benchmark/vector_store/: __init__.py  base.py  database.py  embeddings.py  retriever.py
search_agent/: agent.py  models.py  parser.py  prompts.py  tools.py  ugrep.py
telegram_bot/: bot.py  limiter.py
tests/: bright_benchmark.py  conftest.py  metrics.py  test_citations.py  test_limiter.py  test_list_folder.py  test_parser.py  test_parser_real.py  test_parser_standalone.py  test_rg_direct.py  test_ug_pdf.py  test_ugrep.py  test_vector_store.py
tests/fixtures/: sample.txt
